--- a/manifest.json
+++ b/manifest.json
@@ -9,13 +9,23 @@
   "theme_color": "#4CAF50",
   "icons": [
     {
-      "src": "./icon.png",
+      "src": "assets/icons/icon.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "./icon-512.png",
+      "src": "assets/icons/icon-512.png",
       "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "assets/icons/favicon-32x32.png",
+      "sizes": "32x32",
+      "type": "image/png"
+    },
+    {
+      "src": "assets/icons/favicon-16x16.png",
+      "sizes": "16x16",
       "type": "image/png"
     }
   ]
